# Delaunary-Triangulation

./: CMakeLists.txt  Readme.md  common.h  curPoint.h  delaunay.h  edge.h  main.cpp  point.h  triangle.h
inputs/: points.txt
outputs/: segments.txt
